Fix clipped pic

--- a/frontend/src/styles/SavedSpotCard.scss
+++ b/frontend/src/styles/SavedSpotCard.scss
@@ -4,7 +4,7 @@
   color: #000000;
   text-decoration: none;
   width: 100%;
-  height: auto;
+  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 0.65rem;
